# open-gasti

./: .gitignore  AGENTS.md  Makefile  README.md  main.bean  pyproject.toml
.opencode/skills/gasti-add/: SKILL.md
.opencode/skills/gasti-add/references/: accounts.md
.opencode/skills/gasti-balance/: SKILL.md
.opencode/skills/gasti-prices/: SKILL.md
.opencode/skills/gasti-query/: SKILL.md
.opencode/skills/opengasti-add/: SKILL.md
.opencode/skills/opengasti-balance/: SKILL.md
.opencode/skills/opengasti-prices/: SKILL.md
.opencode/skills/opengasti-query/: SKILL.md
.opencode/skills/opengasti-query/references/: queries.md
.sisyphus/: boulder.json
.sisyphus/plans/: opengasti-skills.md
config/: accounts.bean  options.bean  queries.bean
docs/: ACCOUNTS.md  LLM-SETUP-GUIDE.md  MCP.md  SCRIPTING.md  SETUP.md  WORKFLOWS.md
mcp/: README.md
plugins/: __init__.py
prices/: manual.bean
scripts/: fetch_prices.py  monthly_report.sh  update_all.sh  validate.sh
transactions/: balances.bean
transactions/2026/: 01-january.bean
